--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -189,14 +189,17 @@
       </section>
       <section>
         <item>
+          <!-- Also in 'vbox_view' page in preferences -->
           <attribute name="action">win.viewHideBoringPodcasts</attribute>
           <attribute name="label" translatable="yes">Hide podcasts without episodes</attribute>
         </item>
         <item>
+          <!-- Also in 'vbox_view' page in preferences -->
           <attribute name="action">win.viewShowAllEpisodes</attribute>
           <attribute name="label" translatable="yes">"All episodes" in podcast list</attribute>
         </item>
         <item>
+          <!-- Also in 'vbox_view' page in preferences -->
           <attribute name="action">win.viewShowPodcastSections</attribute>
           <attribute name="label" translatable="yes">Use sections for podcast list</attribute>
         </item>
@@ -229,14 +232,17 @@
       </section>
       <section>
         <item>
+          <!-- Also in 'vbox_view' page in preferences -->
           <attribute name="action">win.viewAlwaysShowNewEpisodes</attribute>
           <attribute name="label" translatable="yes">Always show New Episodes</attribute>
         </item>
         <item>
+          <!-- Also in 'vbox_view' page in preferences -->
           <attribute name="action">win.viewTrimEpisodeTitlePrefix</attribute>
           <attribute name="label" translatable="yes">Trim episode title prefix</attribute>
         </item>
         <item>
+          <!-- Also in 'vbox_view' page in preferences -->
           <attribute name="action">win.viewShowEpisodeDescription</attribute>
           <attribute name="label" translatable="yes">Episode descriptions</attribute>
           <attribute name="accel">&lt;Primary&gt;d</attribute>
